Fix scrollbar and icons. Contact: Add Open integration. (#1956)

--- a/packages/theme/styles/_colors.scss
+++ b/packages/theme/styles/_colors.scss
@@ -66,9 +66,9 @@
   --highlight-select-border: #2f3544;
   --highlight-select-hover: #323a4e;
 
-  --scrollbar-bar-color: #ffffff10;
-  --scrollbar-bar-hover: #ffffff15;
-  --scrollbar-track-color: #ffffff0a;
+  --scrollbar-bar-color: #28292b;  // #ffffff10;
+  --scrollbar-bar-hover: #2d2f36;  // #ffffff15;
+  --scrollbar-track-color: #27282b;  // #ffffff0a;
 
   --dark-color: #62666d;
   --content-color: #8a8f98;
@@ -216,9 +216,9 @@
   --highlight-select-border: #e6eaff;
   --highlight-select-hover: #e4ebff;
 
-  --scrollbar-bar-color: #00000010;
-  --scrollbar-bar-hover: #00000015;
-  --scrollbar-track-color: #0000000a;
+  --scrollbar-bar-color: #eee;  // #00000010;
+  --scrollbar-bar-hover: #f0f3f9;  // #00000015;
+  --scrollbar-track-color: #f8f9fb;  // #0000000a;
 
   --dark-color: #90959d;
   --content-color: #3c4149;
